# tabdat-explore

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SPEC.md  pyproject.toml
.agents/skills/end-user-xp-improver/: SKILL.md
.agents/skills/fp-developer/: SKILL.md
.agents/skills/lesson-documenter/: SKILL.md
.agents/skills/spec-driven-developer/: SKILL.md
.agents/skills/tabdat-core-implementer/: SKILL.md
.agents/skills/tabdat-core-implementer/references/: implementation-boundaries.md
.agents/skills/tabdat-product-architect/references/: command-language-principles.md
.antigravitycli/: d421d480-eb9c-4b56-9b34-2bc20d808100.json
.forge/skills/tabdat-orchestrator/: SKILL.md
.forge/skills/tabdat-product-architect/: SKILL.md
.forge/skills/tabdat-qa-reviewer/: SKILL.md
.forge/skills/tabdat-qa-reviewer/references/: qa-checklist.md
_workspace/: 01_product_command-contract.md  02_implementation_report.md  03_qa_report.md
_workspace/00_input/: request-summary.md
_workspace/final/: tabdat-delivery-summary.md
demos/: canonical_parquet_eda.td  drdid_simulated.td  heckman_mroz.td  ivregress_card.td  panel_union.td
docs/: command-reference.md  command_glossary_v0.md  dev_phase.md  e2e_public_dataset_test_plan.md  language-semantics.md  microecometrics_topics.md  phase0_product_guardrails.md  project_feedback_20260504.md  project_proposal.md  user-guide.md
docs/harness/tabdat/: team-spec.md
integrated_testing/: PR_BODY.md  README.md  RUN_REPORT.md  run_e2e.py
scripts/: check_docs_alignment.py  verify_wheel_help_topic.py
src/tabdat/: __init__.py  backend.py  cli.py  config.py  errors.py  estimation.py  executor.py  extension_registry.py  formatter.py  models.py  monads.py  parser.py  reporting.py  script.py  shell.py  visualization.py
src/tabdat/help/: __init__.py
src/tabdat/help/topics/: append.md  bar.md  bayes.md  bayes_prefix.md  bayesplot.md  by.md  cfregress.md  codebook.md  collapse.md  count.md  cvelasticnet.md  cvlasso.md  cvridge.md  describe.md  did.md  dml.md  drdid.md  drop.md  elasticnet.md  estat.md  estat_report.md  exit.md  export.md  generate.md  head.md  heckman.md  histogram.md  ivregress.md  join.md  keep.md  lasso.md  logit.md  lowess.md  nbreg.md  nl.md  panel.md  poisson.md  postlasso.md  predict.md  probit.md  (+28 more)
tests/: conftest.py  test_canonical_workflow.py  test_cli.py  test_config.py  test_demos.py  test_docs_alignment.py  test_estimation.py  test_estimation_sample_exits.py  test_executor.py  test_extension_registry.py  test_help.py  test_models.py  test_monads.py  test_parser.py  test_script.py  test_shell.py  test_spregress.py  test_statistical_testing.py
