[project]
name = "tabdat-explore-dev"
version = "0.1.0"
description = "Terminal-native exploratory data analysis tool for modern tabular data, Stata-inspired"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=6.1.0",
    "duckdb>=1.4.3",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.13.3",
    "pymonad>=2.4.0",
    "vl-convert-python>=1.9.0.post1",
]

[project.scripts]
tabdat = "tabdat.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pytest>=9.0.1",
    "ruff>=0.15.12",
]

[tool.ruff]
indent-width = 2
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.13"
files = ["src/tabdat"]
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
strict_equality = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["duckdb", "pymonad.*"]
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src/tabdat"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
