[project]
name = "tabdat-explore-dev"
version = "0.1.0"
description = "Terminal-native exploratory data analysis tool for modern tabular data, Stata-inspired"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=6.1.0",
    "duckdb>=1.4.3",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.13.3",
    "polars>=1.36.1",
    "vl-convert-python>=1.9.0.post1",
    "comp-builders @ git+https://github.com/SaehwanPark/comp-builders.git@16c5be2cf112469e24992281df1d6daf5a1eefa9",
    "pyright>=1.1.409",
]

[project.scripts]
tabdat = "tabdat.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pytest>=9.0.1",
    "ruff>=0.15.12",
]

[tool.ruff]
indent-width = 2
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.13"
files = ["src/tabdat"]
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
strict_equality = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["duckdb"]
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src/tabdat"]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
