[project]
name = "tabdat-explore-dev"
version = "0.21.0"
description = "Terminal-native exploratory data analysis tool for modern tabular data, Stata-inspired"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=6.1.0",
    "duckdb>=1.4.3",
    "pandas>=2.2.3",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.13.3",
    "polars>=1.36.1",
    "vl-convert-python>=1.9.0.post1",
    "comp-builders>=1.0.0",
    "statsmodels>=0.14.6",
    "linearmodels>=7.0",
    "rpy2>=3.6.4",
    "scikit-learn>=1.7.0",
    "spreg>=1.4.0",
    "bambi>=0.18.0",
]

[project.scripts]
tabdat = "tabdat.cli:main"

[dependency-groups]
dev = [
    "basedpyright>=1.39.6",
    "mypy>=1.20.2",
    "pytest>=9.0.1",
    "ruff>=0.15.12",
]

[tool.ruff]
indent-width = 2
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.13"
files = ["src/tabdat"]
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
strict_equality = true
plugins = ["pydantic.mypy"]

[tool.basedpyright]
include = ["src/tabdat"]
pythonVersion = "3.13"
typeCheckingMode = "standard"
reportMissingTypeStubs = false

[[tool.mypy.overrides]]
module = [
    "duckdb",
    "libpysal.weights",
    "linearmodels",
    "linearmodels.*",
    "pandas",
    "pandas.*",
    "scipy",
    "scipy.*",
    "statsmodels",
    "statsmodels.*",
    "sklearn.linear_model",
    "sklearn.model_selection",
    "spreg",
    "rpy2",
    "rpy2.*",
]
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src/tabdat"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
